# nequix

./: README.md  eqx_flops.py  pyproject.toml
configs/: nequix-mp-1.yml
data/: download_mptrj.sh
models/: nequix-mp-1.nqx
nequix/: calculator.py  model.py
tests/: test_benchmark.py  test_model.py
